argo-rollouts/canary-demo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-rollouts-ingress-demo-ingress
spec:
  ingressClassName: "nginx"
  rules:
    - host: rollouts.practice.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: example-rollouts-ingress-demo-svc
                port:
                  number: 30009
